# rust-screen-recorder

./: Cargo.toml
src/: main.rs
