[package]
name = "screen-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
crossterm = "0.28.1"
ctrlc = "3.4.5"
open = "5.3.0"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
winapi = "0.3.9"
windows-capture = "1.3.5"
